# sql-query-backend

./: check.ipynb  main.py  pyproject.toml
model/: query.py
