[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.33",
    "mysql>=0.0.3",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "pymysql>=1.1.2",
    "uvicorn>=0.37.0",
]
